new BO Project added new methods for project handling within jobManager (#599)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@1932 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Hive.Contracts/3.2/HeuristicLab.Hive.Contracts-3.2.csproj
+++ b/sources/HeuristicLab.Hive.Contracts/3.2/HeuristicLab.Hive.Contracts-3.2.csproj
@@ -88,6 +88,7 @@
     <Compile Include="ApplicationConstants.cs" />
     <Compile Include="BusinessObjects\CachedHivePluginInfo.cs" />
     <Compile Include="BusinessObjects\ClientGroup.cs" />
+    <Compile Include="BusinessObjects\Project.cs" />
     <Compile Include="BusinessObjects\HivePluginInfo.cs" />
     <Compile Include="BusinessObjects\HeartBeatData.cs" />
     <Compile Include="BusinessObjects\Job.cs" />
