added the logger (#622)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@1933 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Tracing/3.2/HeuristicLab.Tracing-3.2.csproj
+++ b/sources/HeuristicLab.Tracing/3.2/HeuristicLab.Tracing-3.2.csproj
@@ -83,6 +83,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HiveLogger.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="HeuristicLabTracingPlugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
