--- a/sources/HeuristicLab.Hive.Client.Communication/3.2/app.config
+++ b/sources/HeuristicLab.Hive.Client.Communication/3.2/app.config
@@ -3,9 +3,9 @@
     <system.serviceModel>
         <bindings>
             <netTcpBinding>
-                <binding name="NetTcpBinding_IClientCommunicator" closeTimeout="00:01:00"
+                <binding name="NetTcpBinding_IClientFacade" closeTimeout="00:01:00"
                     openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
-                    transactionFlow="false" transferMode="Buffered" transactionProtocol="OleTransactions"
+                    transactionFlow="false" transferMode="Streamed" transactionProtocol="OleTransactions"
                     hostNameComparisonMode="StrongWildcard" listenBacklog="10"
                     maxBufferPoolSize="524288" maxBufferSize="65536" maxConnections="10"
                     maxReceivedMessageSize="65536">
@@ -21,11 +21,11 @@
             </netTcpBinding>
         </bindings>
         <client>
-            <endpoint address="net.tcp://10.20.53.1:9000/HiveServer/ClientCommunicator"
-                binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IClientCommunicator"
-                contract="ServerService.IClientCommunicator" name="NetTcpBinding_IClientCommunicator">
+            <endpoint address="net.tcp://10.20.53.7:9000/HiveServer/ClientCommunicator"
+                binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IClientFacade"
+                contract="ServerService.IClientFacade" name="NetTcpBinding_IClientFacade">
                 <identity>
-                    <userPrincipalName value="mse08023@fhs-hagenberg.ac.at" />
+                    <userPrincipalName value="mse08026@fhs-hagenberg.ac.at" />
                 </identity>
             </endpoint>
         </client>
