--- a/sources/HeuristicLab.Hive.Contracts/3.2/HeuristicLab.Hive.Contracts-3.2.csproj
+++ b/sources/HeuristicLab.Hive.Contracts/3.2/HeuristicLab.Hive.Contracts-3.2.csproj
@@ -114,6 +114,7 @@
     <Compile Include="ResponseList.cs" />
     <Compile Include="ResponsePlugin.cs" />
     <Compile Include="ResponseResultReceived.cs" />
+    <Compile Include="StreamedObject.cs" />
     <Compile Include="WcfSettings.cs" />
   </ItemGroup>
   <ItemGroup>
