--- a/sources/HeuristicLab.Hive.Server.DataAccess/3.2/HeuristicLab.Hive.Server.DataAccess-3.2.csproj
+++ b/sources/HeuristicLab.Hive.Server.DataAccess/3.2/HeuristicLab.Hive.Server.DataAccess-3.2.csproj
@@ -76,6 +76,7 @@
   -->
   <ItemGroup>
     <Compile Include="IPluginInfoAdapter.cs" />
+    <Compile Include="IProjectAdapter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="HiveServerDataAccessPlugin.cs" />
     <Compile Include="IClientAdapter.cs" />
@@ -109,5 +110,10 @@ call PreBuildEvent.cmd</PreBuildEvent>
   <ItemGroup>
     <None Include="HeuristicLab.snk" />
     <None Include="Properties\AssemblyInfo.frame" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="System" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
 </Project>
