Added assigned resources to job adapter (#372)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@1947 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Hive.Server.ADODataAccess/3.2/HeuristicLab.Hive.Server.ADODataAccess-3.2.csproj
+++ b/sources/HeuristicLab.Hive.Server.ADODataAccess/3.2/HeuristicLab.Hive.Server.ADODataAccess-3.2.csproj
@@ -81,6 +81,7 @@
   <ItemGroup>
     <Compile Include="ClientAdapter.cs" />
     <Compile Include="ClientGroupAdapter.cs" />
+    <Compile Include="ProjectAdapter.cs" />
     <Compile Include="dsHiveServer.cs">
       <DependentUpon>dsHiveServer.xsd</DependentUpon>
       <SubType>Component</SubType>
@@ -104,6 +105,8 @@
     <Compile Include="TableAdapterWrapper\ClientAdapterWrapper.cs" />
     <Compile Include="TableAdapterWrapper\ClientGroupAdapterWrapper.cs" />
     <Compile Include="TableAdapterWrapper\ClientGroup_ResourceAdapterWrapper.cs" />
+    <Compile Include="TableAdapterWrapper\AssignedResourcesAdapterWrapper.cs" />
+    <Compile Include="TableAdapterWrapper\ProjectAdapterWrapper.cs" />
     <Compile Include="TableAdapterWrapper\RequiredPluginsAdapterWrapper.cs" />
     <Compile Include="TableAdapterWrapper\PluginInfoAdapterWrapper.cs" />
     <Compile Include="TableAdapterWrapper\ResourceAdapterWrapper.cs" />
