fixed persistence problems (#493)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@1959 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Tracing/3.2/HeuristicLab.Tracing-3.2.csproj
+++ b/sources/HeuristicLab.Tracing/3.2/HeuristicLab.Tracing-3.2.csproj
@@ -112,6 +112,7 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="HeuristicLab.Hive.log4net.xml" />
     <Content Include="log4net licence.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
