--- a/sources/HeuristicLab.Visualization/3.2/HeuristicLab.Visualization-3.2.csproj
+++ b/sources/HeuristicLab.Visualization/3.2/HeuristicLab.Visualization-3.2.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{E392A1E2-DC95-4E33-B82E-8ED690EDA1AB}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -100,6 +100,7 @@
     <Compile Include="ChartDataRowsModelDummy.cs" />
     <Compile Include="Drawing\CompositeShape.cs" />
     <Compile Include="ChartDataRowsModelDataCollector.cs" />
+    <Compile Include="ChartDataRowsModelInjector.cs" />
     <Compile Include="DataExport\CSVDataExport.cs" />
     <Compile Include="DataExport\CSVWriter.cs" />
     <Compile Include="DataExport\ExportDialog.cs">
