--- a/sources/HeuristicLab.Visualization/3.2/HeuristicLab.Visualization-3.2.csproj
+++ b/sources/HeuristicLab.Visualization/3.2/HeuristicLab.Visualization-3.2.csproj
@@ -88,6 +88,7 @@
     <Compile Include="AvgLineAggregator.cs" />
     <Compile Include="AxisPosition.cs" />
     <Compile Include="AxisTicks.cs" />
+    <Compile Include="DataExport\ImageDataExport.cs" />
     <Compile Include="Drawing\Canvas.cs" />
     <Compile Include="Drawing\CanvasUI.cs">
       <SubType>Component</SubType>
