added many new persisted properties. removed useless comments. added XmlSupport class since the code for setting xml attributes is always the same. #639
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@1993 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Visualization.Test/3.2/HeuristicLab.Visualization.Test-3.2.csproj
+++ b/sources/HeuristicLab.Visualization.Test/3.2/HeuristicLab.Visualization.Test-3.2.csproj
@@ -96,6 +96,7 @@
     <Compile Include="LegendForm.Designer.cs">
       <DependentUpon>LegendForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="LineChartPersistenceTests.cs" />
     <Compile Include="LineChartTestForm.cs">
       <SubType>Form</SubType>
     </Compile>
