implemented service methods to get and set an calender #468
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2023 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Hive.Client.Console/3.2/HeuristicLab.Hive.Client.Console-3.2.csproj
+++ b/sources/HeuristicLab.Hive.Client.Console/3.2/HeuristicLab.Hive.Client.Console-3.2.csproj
@@ -212,7 +212,10 @@
     <None Include="Resources\schedule.jpg" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Properties\DataSources\Calendar.Appointment.datasource" />
     <None Include="Resources\shutdown-icon.png" />
+    <None Include="Service References\ClientService\Calendar.xsd" />
+    <None Include="Service References\ClientService\System.Drawing.xsd" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
