--- a/sources/HeuristicLab.Hive.Client.Console/3.2/app.config
+++ b/sources/HeuristicLab.Hive.Client.Console/3.2/app.config
@@ -12,4 +12,34 @@
             </setting>
         </HeuristicLab.Hive.Client.Console.Properties.Settings>
     </userSettings>
+       <system.serviceModel>
+              <bindings>
+                     <netTcpBinding>
+                            <binding name="NetTcpBinding_IClientConsoleCommunicator" closeTimeout="00:01:00"
+                                   openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
+                                   transactionFlow="false" transferMode="Buffered" transactionProtocol="OleTransactions"
+                                   hostNameComparisonMode="StrongWildcard" listenBacklog="10"
+                                   maxBufferPoolSize="524288" maxBufferSize="65536" maxConnections="10"
+                                   maxReceivedMessageSize="65536">
+                                   <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
+                                          maxBytesPerRead="4096" maxNameTableCharCount="16384" />
+                                   <reliableSession ordered="true" inactivityTimeout="00:10:00"
+                                          enabled="false" />
+                                   <security mode="Transport">
+                                          <transport clientCredentialType="Windows" protectionLevel="EncryptAndSign" />
+                                          <message clientCredentialType="Windows" />
+                                   </security>
+                            </binding>
+                     </netTcpBinding>
+              </bindings>
+              <client>
+                     <endpoint address="net.tcp://127.0.0.1:8000/ClientConsole/ClientConsoleCommunicator"
+                            binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IClientConsoleCommunicator"
+                            contract="ClientService.IClientConsoleCommunicator" name="NetTcpBinding_IClientConsoleCommunicator">
+                            <identity>
+                                   <userPrincipalName value="mse08004@fhs-hagenberg.ac.at" />
+                            </identity>
+                     </endpoint>
+              </client>
+       </system.serviceModel>
 </configuration>
