Worked on asynchronous result polling in `HiveEngine`. #545 (Engine which can be executed in the Hive).
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2032 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Hive.Engine/3.2/HeuristicLab.Hive.Engine-3.2.csproj
+++ b/sources/HeuristicLab.Hive.Engine/3.2/HeuristicLab.Hive.Engine-3.2.csproj
@@ -125,6 +125,10 @@
       <Project>{B4BE8E53-BA06-4237-9A01-24255F880201}</Project>
       <Name>HeuristicLab.SequentialEngine-3.2</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\HeuristicLab.Tracing\3.2\HeuristicLab.Tracing-3.2.csproj">
+      <Project>{EE2034D9-6E27-48A1-B855-42D45F69A4FC}</Project>
+      <Name>HeuristicLab.Tracing-3.2</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="HeuristicLab.snk" />
