--- a/sources/HeuristicLab.Visualization/3.2/HeuristicLab.Visualization-3.2.csproj
+++ b/sources/HeuristicLab.Visualization/3.2/HeuristicLab.Visualization-3.2.csproj
@@ -115,6 +115,12 @@
     <Compile Include="FloatingAvgAggregator.cs" />
     <Compile Include="LabelProvider\ContinuousLabelProvider.cs" />
     <Compile Include="LabelProvider\DiscreteLabelProvider.cs" />
+    <Compile Include="Options\AddLineDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Options\AddLineDialog.Designer.cs">
+      <DependentUpon>AddLineDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="Options\ColorSelection.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -203,6 +209,9 @@
     <EmbeddedResource Include="LineChart.resx">
       <DependentUpon>LineChart.cs</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Options\AddLineDialog.resx">
+      <DependentUpon>AddLineDialog.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Options\ColorSelection.resx">
       <DependentUpon>ColorSelection.cs</DependentUpon>
