Implemented base classes for variable impact analysis and implemented specific operators for GP. #644 (Variable impact of CEDMA models should be calculated and stored in the result DB)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2041 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.GP.StructureIdentification/3.3/HeuristicLab.GP.StructureIdentification-3.3.csproj
+++ b/sources/HeuristicLab.GP.StructureIdentification/3.3/HeuristicLab.GP.StructureIdentification-3.3.csproj
@@ -139,6 +139,8 @@
     <Compile Include="SymbolTable.cs" />
     <Compile Include="Tangens.cs" />
     <Compile Include="Variable.cs" />
+    <Compile Include="Evaluators\VariableEvaluationImpactCalculator.cs" />
+    <Compile Include="Evaluators\VariableQualityImpactCalculator.cs" />
     <Compile Include="Xor.cs" />
   </ItemGroup>
   <ItemGroup>
