Refactored `JobManager` and `DistributedEngine` to fix bugs in the `GridExecuter`. #644.
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2055 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Grid/3.2/HeuristicLab.Grid-3.2.csproj
+++ b/sources/HeuristicLab.Grid/3.2/HeuristicLab.Grid-3.2.csproj
@@ -97,6 +97,7 @@
     <Compile Include="ClientForm.designer.cs">
       <DependentUpon>ClientForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="AsyncGridResult.cs" />
     <Compile Include="Database.cs" />
     <Compile Include="EngineRunner.cs" />
     <Compile Include="EngineStore.cs" />
