Refactored `JobManager` and added a plugin that contains a bridge between grid and hive. The bridge allows to use the execution engine service of Hive as a grid server. This way CEDMA job execution and `DistributedEngine` job execution can either use Hive or Grid as backend. #642 (Hive backend for CEDMA)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2058 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.CEDMA.Server/3.3/HeuristicLab.CEDMA.Server-3.3.csproj
+++ b/sources/HeuristicLab.CEDMA.Server/3.3/HeuristicLab.CEDMA.Server-3.3.csproj
@@ -91,9 +91,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ExecuterBase.cs" />
-    <Compile Include="HiveExecuter.cs">
-      <SubType>Code</SubType>
-    </Compile>
     <Compile Include="IExecuter.cs" />
     <Compile Include="DispatcherBase.cs" />
     <Compile Include="GridExecuter.cs" />
@@ -135,13 +132,13 @@
       <Project>{F473D9AF-3F09-4296-9F28-3C65118DAFFA}</Project>
       <Name>HeuristicLab.Data-3.2</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\HeuristicLab.Grid.HiveBridge\3.2\HeuristicLab.Grid.HiveBridge-3.2.csproj">
+      <Project>{DFAC1BEA-6D9D-477F-AC7B-E64977644DDB}</Project>
+      <Name>HeuristicLab.Grid.HiveBridge-3.2</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\HeuristicLab.Grid\3.2\HeuristicLab.Grid-3.2.csproj">
       <Project>{545CE756-98D8-423B-AC2E-6E7D70926E5C}</Project>
       <Name>HeuristicLab.Grid-3.2</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\HeuristicLab.Hive.Engine\3.2\HeuristicLab.Hive.Engine-3.2.csproj">
-      <Project>{C8FEDAC1-0326-4293-B585-F0FEDDEDFC11}</Project>
-      <Name>HeuristicLab.Hive.Engine-3.2</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\HeuristicLab.Modeling\3.2\HeuristicLab.Modeling-3.2.csproj">
       <Project>{80F7FADA-549D-4151-8856-79B620A50DBA}</Project>
