Added optimistic locking information (DB settings) (#527)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2061 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.DataAccess.ADOHelper/3.2/HeuristicLab.DataAccess.ADOHelper-3.2.csproj
+++ b/sources/HeuristicLab.DataAccess.ADOHelper/3.2/HeuristicLab.DataAccess.ADOHelper-3.2.csproj
@@ -122,4 +122,7 @@ set Outdir=$(Outdir)
 
 call PreBuildEvent.cmd</PreBuildEvent>
   </PropertyGroup>
+  <ItemGroup>
+    <Content Include="DatabaseOptions.txt" />
+  </ItemGroup>
 </Project>
